--- a/assets/main.glade
+++ b/assets/main.glade
@@ -5,9 +5,6 @@
   <object class="GtkListStore" id="liststore1"/>
   <object class="GtkApplicationWindow" id="main">
     <property name="can_focus">False</property>
-    <property name="resizable">False</property>
-    <property name="default_width">600</property>
-    <property name="default_height">600</property>
     <child type="titlebar">
       <placeholder/>
     </child>
@@ -19,7 +16,7 @@
           <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="halign">start</property>
+            <property name="halign">center</property>
             <property name="valign">start</property>
             <property name="orientation">vertical</property>
             <child>
@@ -38,14 +35,10 @@
             </child>
             <child>
               <object class="GtkGrid" id="button_grid">
-                <property name="width_request">390</property>
-                <property name="height_request">236</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="halign">start</property>
-                <property name="valign">start</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
+                <property name="halign">center</property>
+                <property name="valign">center</property>
                 <property name="row_spacing">4</property>
                 <property name="column_spacing">4</property>
                 <property name="row_homogeneous">True</property>
@@ -89,6 +82,7 @@
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_bottom">8</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="action_name">
@@ -130,7 +124,7 @@
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="padding">5</property>
             <property name="position">0</property>
