--- a/assets/image_picker.ui
+++ b/assets/image_picker.ui
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkBox" id="image_picker">
+  <template class="ImagePicker" parent="GtkBox">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="orientation">vertical</property>
@@ -31,7 +31,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkRadioButton" id="state_normal">
+          <object class="GtkRadioButton" id="state_normal_button">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
@@ -40,7 +40,7 @@
             <property name="use_stock">True</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
-            <property name="group">state_active</property>
+            <property name="group">state_active_button</property>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -49,7 +49,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkRadioButton" id="state_active">
+          <object class="GtkRadioButton" id="state_active_button">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
@@ -58,7 +58,7 @@
             <property name="use_stock">True</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
-            <property name="group">state_normal</property>
+            <property name="group">state_normal_button</property>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -73,5 +73,5 @@
         <property name="position">1</property>
       </packing>
     </child>
-  </object>
+  </template>
 </interface>
